<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activity.SplashActivity">

    <!-- Logo Container -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- App Icon/Symbol -->
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <!-- App Name -->
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_h1"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="@dimen/spacing_m" />

        <!-- App Name English -->
        <TextView
            android:id="@+id/tv_app_name_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_en"
            android:textSize="@dimen/text_h3"
            android:textColor="@color/white"
            android:alpha="0.9"
            android:layout_marginTop="@dimen/spacing_xs" />

        <!-- Tagline -->
        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_tagline"
            android:textSize="@dimen/text_body2"
            android:textColor="@color/white"
            android:alpha="0.8"
            android:layout_marginTop="@dimen/spacing_l" />

    </LinearLayout>

    <!-- Loading Indicator -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing_xxl" />

</androidx.constraintlayout.widget.ConstraintLayout>
